1.36/07-harbor/harbor-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor
  namespace: harbor
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
      sectionName: http
    - name: eg
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "harbor.kryukov.lan"
  rules:
    - backendRefs:
        - kind: Service
          name: harbor
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
